--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "firebase": "^10.11.1",
+    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
